                      __  __            _
                     |  \/  | __ _ _ __| | ___ _ __   ___
                     | |\/| |/ _` | '__| |/ _ \ '_ \ / _ \
                     | |  | | (_| | |  | |  __/ | | |  __/
                     |_|  |_|\__,_|_|  |_|\___|_| |_|\___|
                     http://service-technology.org/marlene


Version 1.1-unreleased
======================

* changed behavior concerning prefixes: default is no prefixes added to the
  nets, `--with-prefix' adds a unique prefix to each read net.


Version 1.0
===========

* choice whether to use synchronous/asynchronous interface between controller
  and engine

* added scripts to use LCOV (`http://ltp.sourceforge.net/coverage/lcov.php')
  to determine test case coverage (use `make cover' in `tests' directory)

* support for asynchronouns and synchrouns services (so adapter rules can
  handle message transformation and synchronization)

* open nets can be read several times in one adaptation step, each read net
  gets a unique id as prefix

* added support for chatty and arrogant adapter (`--chatty'/`--arrogant')

* it is possible to only return the controller part of the adapter
  (`--controlleronly')


Version 0.5
===========

* initial release



