@@ -1,3 +1,5 @@
--> MTeaButton;
-bla -> MTeaButton;
+-> MTeaButton;  # This is a comment
+# And this is also a comment
+bla -> MTeaButton, blub;
+
 
