@@ -52,6 +52,14 @@ AT_CHECK([MARLENE test-n.owfn -r test-n.ar -n],0,ignore)
 AT_KEYWORDS(sample)
 AT_CLEANUP
 
+AT_SETUP([Small test (piping)])
+AT_CHECK_WENDY
+AT_CHECK_LOLA
+AT_CHECK([cp TESTFILES/test-n.owfn TESTFILES/test-n.ar .])
+AT_CHECK([MARLENE -r test-n.ar -n < test-n.owfn > out.owfn],0,ignore)
+AT_KEYWORDS(sample)
+AT_CLEANUP
+
 ############################################################################
 AT_BANNER([Special options])
 ############################################################################
@@ -97,11 +105,27 @@ AT_CLEANUP
 #AT_KEYWORDS(specadapters)
 #AT_CLEANUP
 
+AT_SETUP([engine only])
+AT_CHECK_WENDY
+AT_CHECK_LOLA
+AT_CHECK([cp TESTFILES/test.owfn TESTFILES/test.ar .])
+AT_CHECK([MARLENE test.owfn -r test.ar --engineonly],0,ignore)
+AT_KEYWORDS(sample)
+AT_CLEANUP
+
 AT_SETUP([controller only])
 AT_CHECK_WENDY
 AT_CHECK_LOLA
 AT_CHECK([cp TESTFILES/test.owfn TESTFILES/test.ar .])
 AT_CHECK([MARLENE test.owfn -r test.ar --controlleronly],0,ignore)
 AT_KEYWORDS(sample)
+AT_CLEANUP
+
+AT_SETUP([adding prefixes to nets])
+AT_CHECK_WENDY
+AT_CHECK_LOLA
+AT_CHECK([cp TESTFILES/ca1.owfn TESTFILES/td.owfn TESTFILES/td.ar .])
+AT_CHECK([MARLENE ca1.owfn td.owfn td.owfn -r td.ar --withprefix],0,ignore)
+AT_KEYWORDS(specadapters)
 AT_CLEANUP
 
